Ajout du jour de la semaine dans les données des itemstats pour faciliter le groupby côté client + Gestion des indexes MongoDB
